fixed HighScore